# pgmob

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/bump-version/: action.yaml
.github/actions/publish/: action.yaml
.github/actions/test/: action.yaml
.github/actions/test-docs/: action.yaml
.github/instructions/: api-standards.md  cicd-workflow.md  security-guidelines.md
.github/scripts/: parse_changelog.py
.github/workflows/: CI.yaml  auto-release.yaml  docs.yaml  publish.yaml  release.yaml  test.yaml
.kiro/steering/: api-standards.md  cicd-workflow.md  code-conventions.md  documentation-standards.md  project-patterns.md  security-guidelines.md  testing-standards.md
.windsurf/rules/: README.md  api-standards.md  cicd-workflow.md  code-conventions.md  documentation-standards.md  project-patterns.md  security-guidelines.md  testing-standards.md
docs/: conf.py  index.rst  pyproject.toml  requirements.txt
docs/pgmob/: adapters.rst  backup.rst  cluster.rst  errors.rst  objects.rst  sql.rst  util.rst
src/pgmob/: __init__.py  _decorators.py  backup.py  cluster.py  errors.py  os.py  sql.py  util.py
src/pgmob/adapters/: __init__.py  base.py  psycopg2.py
src/pgmob/objects/: __init__.py  databases.py  generic.py  hba_rules.py  large_objects.py  mixins.py  procedures.py  replication_slots.py  roles.py  schemas.py  sequences.py  tables.py  views.py
src/pgmob/scripts/sql/: get_column.sql
src/tests/: conftest.py  helpers.py  test_backup.py  test_cluster.py  test_databases.py  test_decorators.py  test_generic.py  test_hba_rules.py  test_large_objects.py  test_mixins.py  test_os.py  test_procedures.py  test_replication_slots.py  test_roles.py  test_schemas.py  test_sequences.py  test_sql.py  test_tables.py  test_util.py  test_views.py  tuples.py
src/tests/functional/: conftest.py  test_adapters.py  test_backup.py  test_cluster.py  test_databases.py  test_hba_rules.py  test_large_objects.py  test_procedures.py  test_replication_slots.py  test_roles.py  test_schemas.py  test_sequences.py  test_tables.py  test_views.py
