[project]
name = "pgmob"
version = "0.3.0"
description = "Postgres Managed Objects - a Postgres database management interface"
authors = [
    {name = "Kirill Kravtsov", email = "nvarscar@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["postgres", "postgresql", "sql", "backup", "restore", "database", "management"]
dependencies = [
    "packaging>=26.0",
]

[project.optional-dependencies]
psycopg2 = ["psycopg2>=2.9.11,<3"]
psycopg2-binary = ["psycopg2-binary>=2.9.11,<3"]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.3.0",
    "docker>=7.1.0",
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pyyaml>=6.0.3",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/dataplat/pgmob/"
Repository = "https://github.com/dataplat/pgmob"
Documentation = "https://pgmob.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/dataplat/pgmob/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgmob"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"src/tests/**" = ["ARG001", "ARG002", "F403", "F405", "E711", "E712"]  # test patterns

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "asyncio: Async tests",
]

[tool.coverage.run]
source = ["src/pgmob"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# Define named indexes for publishing with uv
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
